--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Sampath Reddy Vengate # your name (or website title) here
 logo: "/images/cover_pict.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
-  <br><br>
+  <br> ertert <br>
   Second description 
   <br><br>
   <a href="https://www.linkedin.com/in/sampath-reddy-vengate/">View My LinkedIn Profile</a> 
